# balance-board

./: README.md  main.ui  ui_main.h
creator/build-wii-balance-Desktop_Qt_5_13_0_GCC_64bit-Debug/: Makefile  moc_wii-balance.cpp  ui_wii-balance.h
creator/wii-balance/: main.cpp  wii-balance.cpp  wii-balance.h  wii-balance.pro  wii-balance.ui
creator/wii-balance/wii-scale/: BlueZDevice.cpp  UDev.cpp  UDevDevice.h  XWiiMonitor.cpp  wii-scale.cpp
wii-scale/: 70-wii-scales.rules  BlueZDevice.h  CMakeCache.txt  CMakeLists.txt  Makefile  UDev.h  UDevDevice.cpp  XWiiIface.cpp  XWiiIface.h  XWiiMonitor.h  cmake_install.cmake  wii-scale  wii-scale.cpp
